Created login and main pages; Register, login and logout implemented

--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -13,7 +13,7 @@
 	Last Name<input type="text" name="lastname"><br>
 	Email<input type="email" name="email"><br>
 	Description <input type="text" name="description">
-	<input type="submit">
+	<input type="submit" value="Registrate">
 </form>
 </body>
 </html>
